# todo-app

./: .env.template  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  ioc.py  main.py
src/application/common/database/: interfaces.py
src/application/common/messaging/: interfaces.py
src/application/common/notifications/: interfaces.py
src/application/common/pagination/: dto.py
src/application/tasks/: dto.py  interactors.py
src/application/tasks/interfaces/: crud.py  repo.py
src/application/users/: dto.py  interactors.py
src/application/users/interfaces/: crud.py  repo.py
src/controllers/ampq/: router.py  schemas.py
src/controllers/api/: router.py
src/controllers/api/tasks/: router.py  schemas.py
src/controllers/api/tasks/priorities/: router.py  schemas.py
src/controllers/api/tasks/statuses/: router.py  schemas.py
src/controllers/api/users/: router.py  schemas.py
src/controllers/api/users/auth/: backend.py  manager.py  router.py  schemas.py  users.py
src/domain/tasks/: entities.py
src/domain/users/: entities.py
src/infrastructure/broker/: connection.py
src/infrastructure/database/: connection.py  converters.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 1c68af5d9fd7_.py  42000d0fc6dc_.py  (+1 more)
src/infrastructure/database/models/: __init__.py  base.py  tasks.py  users.py
src/infrastructure/database/repositories/: tasks.py  users.py
src/infrastructure/gateways/: tasks.py
src/infrastructure/notifications/: email_notification.py
