[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.2"
dishka = "^1.3.0"
environs = "^11.0.0"
fastapi = "^0.114.2"
faststream = {extras = ["rabbit"], version = "^0.5.23"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"
fastapi-users = {extras = ["redis"], version = "^13.0.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
